$ Deleting unused ini files
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15572 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+25-Mar-2010 Jean-Marie Simonet
+$ Deleting unused ini files
+
 24-Mar-2010 Ian MacLennan
  # Fixed bug in JError
 
