Fix language strings, remove empty folder
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15617 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/en-GB/en-GB.com_users.menu.ini
+++ b/administrator/language/en-GB/en-GB.com_users.menu.ini
@@ -18,7 +18,7 @@ COM_USER_PROFILE_EDIT_DEFAULT_TITLE="Edit User Profile"
 COM_USER_PROFILE_EDIT_DEFAULT_DESC=""
 COM_USER_REGISTRATION_DEFAULT_TITLE="Registration Form"
 COM_USER_REGISTRATION_DEFAULT_DESC=""
-COM_USER_REMIND_DEFAULT_TITLE="Password Reminder Request"
+COM_USER_REMIND_DEFAULT_TITLE="Username Reminder Request"
 COM_USER_REMIND_DEFAULT_DESC=""
 COM_USER_RESEND_DEFAULT_TITLE="Password Resend Request"
 COM_USER_RESEND_DEFAULT_DESC=""
