Delete unneccesary variable in mod_menu/helper.php. #19997 Thanks Jason
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15619 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,13 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+26-Mar-2010 Mark Dexter
+^ Update doc blocks from JQuery to JDatabaseQuery, thanks Jason Pettett. #19898
+# Fix confusing string (#19888)
+# Delete empty folder
+# Fix strings generating errors and a missing string for com_users
+# Delete unneccesary variable in mod_menu/helper.php. #19997 Thanks Jason Pettett.
+
 25-Mar-2010 Jean-Marie Simonet
 $ Deleting unused ini files
 
