--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -33,6 +33,7 @@ $ -> Language fix or change
 # Delete empty folder
 # Fix strings generating errors and a missing string for com_users
 # Delete unneccesary variable in mod_menu/helper.php. #19997 Thanks Jason Pettett.
+# Fix misc. bugs in modules (Elin Waring)
 
 25-Mar-2010 Jean-Marie Simonet
 $ Deleting unused ini files
