Modify example profile plugin (Elin Waring)
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15623 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -37,6 +37,7 @@ $ -> Language fix or change
 # Fix acl in joomla.sql table (Elin Waring)
 ^ Implement parameters in Single Article Menu Item
 ^ Implement global category blog vs. list param in content
+^ Modify example user profile plugin (Elin Waring)
 
 25-Mar-2010 Jean-Marie Simonet
 $ Deleting unused ini files
