--- a/tests/CHANGELOG
+++ b/tests/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+26-Mar-2010 Mark Dexter
+# Change menu0001Test.php to reflect new id in Module Edit
+
 16-Mar-2010 Mark Dexter
 # Adjusted tests for changes in core
 + Added new method to count verification errors
