#$^ Enabling parsing language files errors in debug lang mode only (new param in plugin) + corrected one string in main ini
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15628 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/en-GB/en-GB.ini
+++ b/administrator/language/en-GB/en-GB.ini
@@ -10,8 +10,8 @@
 
 ; Common boolean values
 ; Note: YES, NO, TRUE, FALSE are reserved words in INI format.
-JERROR_PARSING_LANGUAGE_FILE="The language file %1$s was not read correctly: error in lines %2$s"
-LIB_FORM_VALIDATE_FIELD_REQUIRED=Field required: %s
+JERROR_PARSING_LANGUAGE_FILE="&nbsp;: error(s) in line(s) %s"
+LIB_FORM_VALIDATE_FIELD_REQUIRED="Field required: %s"
 
 JDISABLED="Disabled"
 JENABLED="Enabled"
