--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+27-Mar-2010 Christophe Demko and Jean-Marie Simonet
+#$^ Enabling parsing language files errors in debug lang mode only (new param in plugin) + corrected one string in main ini
+
 26-Mar-2010 Mark Dexter
 ^ Update doc blocks from JQuery to JDatabaseQuery, thanks Jason Pettett. #19898
 # Fix confusing string (#19888)
