--- a/language/en-GB/en-GB.ini
+++ b/language/en-GB/en-GB.ini
@@ -6,8 +6,8 @@
 
 ; Date format
 
-JERROR_PARSING_LANGUAGE_FILE="The language file %1$s was not read correctly: error in lines %2$s"
-LIB_FORM_VALIDATE_FIELD_REQUIRED=Field required: %s
+JERROR_PARSING_LANGUAGE_FILE="&nbsp;: error(s) in line(s) %s"
+LIB_FORM_VALIDATE_FIELD_REQUIRED="Field required: %s"
 
 JNO="No"
 JOFF="Off"
