Bug fix in system test doInstall.php
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15631 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/tests/CHANGELOG
+++ b/tests/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+27-Mar-2010 Mark Dexter
+# Fix bug in doInstall.php 
+
 26-Mar-2010 Mark Dexter
 # Change menu0001Test.php to reflect new id in Module Edit
 
