# Fixed com_mailto, com_search, com_users, com_weblinks in frontend and com_plugins in backend to properly use JController::getInstance() and not hard-include a controller # Fixed URL routing in categories view
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15649 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+27-Mar-2010 Hannes Papenberg
+# Fixed com_mailto, com_search, com_users, com_weblinks in frontend and com_plugins in backend to properly use JController::getInstance() and not hard-include a controller
+# Fixed URL routing in categories view
+
 17-Mar-2010 Mark Dexter
 ^ Sample data fixes (Elin Waring)
 ^ User profile fixes (Elin Waring)
