$ Correcting some language strings
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15652 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/en-GB/en-GB.com_menus.ini
+++ b/administrator/language/en-GB/en-GB.com_menus.ini
@@ -124,7 +124,7 @@ COM_MENUS_BASIC_FIELDSET_LABEL="Basic Options"
 COM_MENUS_ADVANCED_FIELDSET_LABEL="Advanced Options"
 COM_MENUS_METADATA_FIELDSET_LABEL="Metadata Options"
 COM_MENUS_INTEGRATION_FIELDSET_LABEL="Integration Options"
-COM_MENUS_REQUEST_FIELDSET_LABEL="URL Settings"
+COM_MENUS_REQUEST_FIELDSET_LABEL="Requested Settings"
 
 ; controllers
 COM_MENUS_NO_MENUS_SELECTED="No menu selected"
