$ Refactored com_search back-end front end ini/keys +some
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15672 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+29-Mar-2010 Jean-Marie Simonet
+$ Refactored com_search back-end front end ini/keys +some
+
 28-Mar-2010 Jean-Marie Simonet
 $ Correcting some language strings
 
