--- a/administrator/language/en-GB/en-GB.ini
+++ b/administrator/language/en-GB/en-GB.ini
@@ -1059,6 +1059,7 @@ JGLOBAL_LINK_PARENT_CATEGORY_LABEL="Link Parent"
 JGLOBAL_SHOW_PARENT_CATEGORY_DESC="If set to Show, the title of the article&rsquo;s parent category will show."
 JGLOBAL_SHOW_PARENT_CATEGORY_LABEL="Show Parent"
 
+JGLOBAL_EDIT_PREFERENCES="Edit Preferences"
 
 ALL_HIERARCHY="All Levels as Hierarchy"
 NEXT_LEVEL_ONLY="Next Level Only"
