--- a/language/en-GB/en-GB.ini
+++ b/language/en-GB/en-GB.ini
@@ -32,7 +32,7 @@ JCOMMON_INHERIT="Inherit"
 JCOMMON_NEWITEMSLAST_DESC="New items default to the last position. Ordering can be changed after this item has been saved."
 JCOMMON_CLICK_TO_SORT_THIS_COLUMN="Click to sort by this column"
 JCOMMON_RESOURCE_NOT_FOUND="Resource not found"
-
+JGLOBAL_DISPLAY_NUM="Display #"
 
 JRECORD_NUMBER="Record ID: %d"
 JERROR_LOADING_FEED_DATA="Error loading feed data"
