$ Added a string for com_module to customize "item"
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15674 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 29-Mar-2010 Jean-Marie Simonet
 $ Refactored com_search back-end front end ini/keys +some
+$ Added a string for com_module to customize "item"
 
 28-Mar-2010 Jean-Marie Simonet
 $ Correcting some language strings
