--- a/administrator/language/en-GB/en-GB.com_modules.ini
+++ b/administrator/language/en-GB/en-GB.com_modules.ini
@@ -47,6 +47,8 @@ COM_MODULES_MODULE_ARCHIVED="Module successfully archived"
 COM_MODULES_N_MODULES_ARCHIVED="%d modules successfully archived"
 COM_MODULES_MODULE_TRASHED="Module successfully trashed"
 COM_MODULES_N_MODULES_TRASHED="%d modules successfully trashed"
+JCONTROLLER_SAVE_SUCCESS="Module successfully saved"
+
 
 ; Edit module fields
 
