$ Mass changed key prefix JCOMMON to JGLOBAL.
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15675 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/xx-XX/xx-XX.ini
+++ b/administrator/language/xx-XX/xx-XX.ini
@@ -27,10 +27,10 @@ JNO="No"
 JYES="Oui"
 JTRUE="True"
 JFALSE="False"
-JCOMMON_HIDE="Hide"
-JCOMMON_SHOW="Show"
-JCOMMON_USE_GLOBAL="Use Global"
-JCOMMON_INHERIT="Inherit"
+JHIDE="Hide"
+JSHOW="Show"
+JGLOBAL_USE_GLOBAL="Use Global"
+JGLOBAL_INHERIT="Inherit"
 JRECORD_NUMBER="Record ID: %d"
 
 JCONFIG_PERMISSIONS_LABEL="Permissions"
@@ -75,9 +75,9 @@ JSUCCESS_ORDERING_SAVED="Ordering successfully saved."
 JCONTROLLER_SAVE_SUCCESS="Item successfully saved."
 ERROR_PARSING_LANGUAGE_FILE="This language file was not read correctly:"
 
-JCOMMON_EDIT_ITEM="Edit item"
-JCOMMON_HIDE="Hide"
-JCOMMON_SHOW="Show"
+JGLOBAL_EDIT_ITEM="Edit item"
+JHIDE="Hide"
+JSHOW="Show"
 
 JGRID_HEADING_ACCESS="Access"
 JGRID_HEADING_CATEGORY="Category"
@@ -420,7 +420,7 @@ CHECKED_OUT="Checked out"
 CHECKIN_MANAGER="Check in Manager"
 CLICK_ON_ICON_TO_TOGGLE_STATE_="Click on icon to toggle state."
 CLICK_TO_CHECK_IN="Click to Check-in"
-JCOMMON_CLICK_TO_SORT_THIS_COLUMN="Click to sort by this column"
+JGLOBAL_CLICK_TO_SORT_THIS_COLUMN="Click to sort by this column"
 CLIENTS="Clients"
 CLOSE="Close"
 CLOSE_ALL="Close All"
@@ -453,7 +453,7 @@ DELETED="Deleted"
 DELETING="Deleting"
 DESCBEINGEDITTED="%s %s is currently being edited by another administrator"
 DESCNEWITEMSFIRST="New items default to the first position. The ordering can be changed after this item is saved."
-JCOMMON_NEWITEMSLAST_DESC="New items default to the last position. The ordering can be changed after this item is saved."
+JGLOBAL_NEWITEMSLAST_DESC="New items default to the last position. The ordering can be changed after this item is saved."
 DESCRIPTION="Description"
 DESCUSEVALIDLOGIN="Use a valid username and password to gain access to the Administrator Control Panel."
 DETAILS="Details"
@@ -832,7 +832,7 @@ WARNFS_ERR02="Warning: Failed to move file!"
 WARNFS_ERR03="Upload failed. Directory not writable."
 WARNFS_ERR04="Upload failed. Directory does not exist."
 WARNING="Warning"
-JCOMMON_WARNJAVASCRIPT="Warning! JavaScript must be enabled for proper operation of the Administrator back-end."
+JGLOBAL_WARNJAVASCRIPT="Warning! JavaScript must be enabled for proper operation of the Administrator back-end."
 WEB="Web"
 WEBLINK="Web Link"
 WEB_LINKS="Web Links"
@@ -867,8 +867,8 @@ BACKTRACE="Backtrace"
 ERRORS="Errors"
 INFO="Info"
 
-JCOMMON_INTRO_TEXT="Intro Text"
-JCOMMON_FULL_TEXT="Full Text"
+JGLOBAL_INTRO_TEXT="Intro Text"
+JGLOBAL_FULL_TEXT="Full Text"
 
 ; Options
 CONTENT_ATTRIBS_SHOW_UNAUTH_LINKS_DESC="If set to Yes, links to registered content will be shown even if you are not logged in. You will need to log in to access the full item."
