--- a/language/en-GB/en-GB.ini
+++ b/language/en-GB/en-GB.ini
@@ -18,19 +18,19 @@ JPREVIOUS="Previous"
 JNEXT="Next"
 JSAVE="Save"
 JCANCEL="Cancel"
-JCOMMON_GT="&gt;"
-JCOMMON_LT="&lt;"
+JGLOBAL_GT="&gt;"
+JGLOBAL_LT="&lt;"
 JHIDE="Hide"
 JSHOW="Show"
 JALL="All"
 JTRUE="True"
 JFALSE="False"
-JCOMMON_HIDE="Hide"
-JCOMMON_SHOW="Show"
-JCOMMON_USE_GLOBAL="Use Global"
-JCOMMON_INHERIT="Inherit"
-JCOMMON_NEWITEMSLAST_DESC="New items default to the last position. Ordering can be changed after this item has been saved."
-JCOMMON_CLICK_TO_SORT_THIS_COLUMN="Click to sort by this column"
+JHIDE="Hide"
+JSHOW="Show"
+JGLOBAL_USE_GLOBAL="Use Global"
+JGLOBAL_INHERIT="Inherit"
+JGLOBAL_NEWITEMSLAST_DESC="New items default to the last position. Ordering can be changed after this item has been saved."
+JGLOBAL_CLICK_TO_SORT_THIS_COLUMN="Click to sort by this column"
 JCOMMON_RESOURCE_NOT_FOUND="Resource not found"
 JGLOBAL_DISPLAY_NUM="Display #"
 
