--- a/language/xx-XX/xx-XX.ini
+++ b/language/xx-XX/xx-XX.ini
@@ -15,17 +15,17 @@ JPREVIOUS="Previous"
 JNEXT="Next"
 JSAVE="Save"
 JCANCEL="Cancel"
-JCOMMON_GT="&gt;"
-JCOMMON_LT="&lt;"
+JGLOBAL_GT="&gt;"
+JGLOBAL_LT="&lt;"
 JHIDE="Hide"
 JSHOW="Show"
 JALL="All"
 JTRUE="True"
 JFALSE="False"
-JCOMMON_HIDE="Hide"
-JCOMMON_SHOW="Show"
-JCOMMON_USE_GLOBAL="Use Global"
-JCOMMON_INHERIT="Inherit"
+JHIDE="Hide"
+JSHOW="Show"
+JGLOBAL_USE_GLOBAL="Use Global"
+JGLOBAL_INHERIT="Inherit"
 JRECORD_NUMBER="Record ID: %d"
 JERROR_LOADING_FEED_DATA="Error loading feed data"
 
@@ -182,7 +182,7 @@ CANNOT_FIND_SOURCE_FILE="Cannot find source file"
 CATEGORY="Category"
 CENTER="Center"
 CHECKED_OUT="Checked Out"
-JCOMMON_CLICK_TO_SORT_THIS_COLUMN="Click to sort by this column"
+JGLOBAL_CLICK_TO_SORT_THIS_COLUMN="Click to sort by this column"
 CLOAKING="This e-mail address is being protected from spambots. You need JavaScript enabled to view it"
 CLOSE_WINDOW="Close Window"
 COMPONENT_NOT_FOUND="Component not found"
@@ -192,7 +192,7 @@ COPY_FAILED="Copy failed"
 DELETE="Delete"
 DESCBEINGEDITTED="%s %s is currently being edited by another Editor, Publisher, or Administrator."
 DESCNEWITEMSFIRST="New items default to the first position. Ordering can be changed after this item has been saved."
-JCOMMON_NEWITEMSLAST_DESC="New items default to the last position. Ordering can be changed after this item has been saved."
+JGLOBAL_NEWITEMSLAST_DESC="New items default to the last position. Ordering can be changed after this item has been saved."
 DIRECTORY_UNWRITABLE="Directory Unwritable"
 DISPLAY_NUM="Display #"
 E_LOGIN_AUTHENTICATE="Username and password do not match or you do not have an account yet."
