$ Refactored com_media back-end ini/keys
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15706 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/en-GB/en-GB.ini
+++ b/administrator/language/en-GB/en-GB.ini
@@ -78,6 +78,8 @@ JERROR_SAVE_FAILED="Save failed with the following error: %s"
 JERROR_SAVE_NOT_PERMITTED="Save not permitted"
 JERROR_FILE_NOT_FOUND="The file %s could not be found."
 JERROR_TABLE_BIND_FAILED="hmm %s ..."
+JERROR_INVALID_CONTROLLER="Invalid controller"
+JERROR_INVALID_CONTROLLER_CLASS="Invalid controller class"
 
 JWARNING_PUBLISH_MUST_SELECT="You must select at least one item to publish."
 JWARNING_ARCHIVE_MUST_SELECT="You must select at least one item to archive."
@@ -189,6 +191,9 @@ JGLOBAL_PAGINATION_DESC="Show or hide Pagination support. Pagination provides pa
 JGLOBAL_PAGINATION_LABEL="Pagination"
 JGLOBAL_PAGINATION_RESULTS_DESC="Show or hide pagination results information, for example, &quot;Page 1 of 4&quot;."
 JGLOBAL_PAGINATION_RESULTS_LABEL="Pagination Results"
+JGLOBAL_PASSWORD="Password"
+JGLOBAL_PASSWORD="Password"
+JGLOBAL_PREVIEW="Preview"
 JGLOBAL_PUBLISHED="Published"
 JGLOBAL_RIGHT="Right"
 JGLOBAL_SHOW_AUTHOR_DESC="If set to Show, the Name of the article's Author will be displayed.  This a global setting but can be changed at the Category, Menu and Article levels."
@@ -238,6 +243,7 @@ JGLOBAL_SINGLE_LEVEL="Single Level"
 JGLOBAL_TITLE_ALPHABETICAL="Title Alphabetical"
 JGLOBAL_TITLE_REVERSE_ALPHABETICAL="Title Reverse Alphabetical"
 JGLOBAL_USE_GLOBAL="Use Global"
+JGLOBAL_USERNAME="Username"
 JGLOBAL_WARNJAVASCRIPT="Warning! JavaScript must be enabled for proper operation of the Administrator back-end."
 
 JGRID_HEADING_ACCESS="Access"
@@ -871,7 +877,6 @@ POSITION="Position"
 POST_STORE_FAILED="Post store failed!"
 PREFERENCES="Parameters"
 PREV="Prev"
-PREVIEW="Preview"
 PREVIOUS="Previous"
 PREVIOUS_PAGE="Previous Page"
 PRINT_ICON="Print Icon"
