--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+
+30-Mar-2010 Sam Moffat
+ + Added wincache session handler for IIS, thanks to Ruslan from Microsoft
+
 30-Mar-2010 Jean-Marie Simonet
 $ Refactored com_media back-end ini/keys
 
