Fix PHP undefined var notice in New Menu Item
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15712 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,8 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+30-Mar-2010 Mark Dexter
+# Fix PHP undefined var notice in New Menu Item 
 
 30-Mar-2010 Sam Moffat
  + Added wincache session handler for IIS, thanks to Ruslan from Microsoft
