$ Refactored com_installer ini/keys
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15723 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/en-GB/en-GB.ini
+++ b/administrator/language/en-GB/en-GB.ini
@@ -435,6 +435,17 @@ JLIB_VALUE_SESSION_MEMCACHE="Memory cache"
 JLIB_VALUE_SESSION_NONE="None"
 JLIB_VALUE_SESSION_XCACHE="XCache"
 
+; from libraries/joomla/installer/
+JLIB_INSTALLER_ABORT="Aborting language installation: %s"
+JLIB_INSTALLER_ERROR_CREATE_FOLDER_FAILED="Failed to create directory [%s]"
+JLIB_INSTALLER_ERROR_DEPRECATED_FORMAT="Deprecated install format (client="_QQ_"both"_QQ_"), use package installer in future"
+JLIB_INSTALLER_ERROR_FOLDER_IN_USE="Another extension is already using directory [%s]"
+JLIB_INSTALLER_ERROR_NO_LANGUAGE_TAG="The package did not specify a language tag. Are you trying to install an old language package?"
+JLIB_INSTALLER_ERROR_NO_CORE_LANGUAGE="No core pack exists for the language [%s]"
+JLIB_INSTALLER_ERROR_UNKNOWN_CLIENT_TYPE="Unknown Client Type [%s]"
+JLIB_INSTALLER_ERRORXMLSETUP="No XML files were found in the install folder."
+
+
 ;
 ; Old string format
 ;
