--- a/administrator/language/en-GB/en-GB.ini
+++ b/administrator/language/en-GB/en-GB.ini
@@ -445,7 +445,7 @@ JLIB_INSTALLER_ERROR_NO_CORE_LANGUAGE="No core pack exists for the language [%s]
 JLIB_INSTALLER_ERROR_UNKNOWN_CLIENT_TYPE="Unknown Client Type [%s]"
 JLIB_INSTALLER_ERRORXMLSETUP="No XML files were found in the install folder."
 
-
+JLIB_DELETE_FAILED="Failed deleting %s"
 ;
 ; Old string format
 ;
