--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+31-Mar-2010 Mark Dexter
+^ Implement parameters in Archived Articles menu item
+
 31-Mar-2010 Jean-Marie Simonet
 $ Refactored com_installer ini/keys
 
