--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 31-Mar-2010 Mark Dexter
 ^ Implement parameters in Archived Articles menu item
+# Minor language file fixes
 
 31-Mar-2010 Jean-Marie Simonet
 $ Refactored com_installer ini/keys
