--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -30,6 +30,7 @@ $ -> Language fix or change
 31-Mar-2010 Mark Dexter
 ^ Implement parameters in Archived Articles menu item
 # Minor language file fixes
+# Bug fixes in content layout files (Angie Radtke)
 
 31-Mar-2010 Jean-Marie Simonet
 $ Refactored com_installer ini/keys
