Add CSS classes to pagination (Angie Radtke)
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15732 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -31,6 +31,7 @@ $ -> Language fix or change
 ^ Implement parameters in Archived Articles menu item
 # Minor language file fixes
 # Bug fixes in content layout files (Angie Radtke)
+^ Add CSS classes to pagination (Angie Radtke)
 
 31-Mar-2010 Jean-Marie Simonet
 $ Refactored com_installer ini/keys
