Module layout fixes (Angie Radtke)
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15733 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -32,6 +32,7 @@ $ -> Language fix or change
 # Minor language file fixes
 # Bug fixes in content layout files (Angie Radtke)
 ^ Add CSS classes to pagination (Angie Radtke)
+# Misc. module layout fixes (Angie Radtke)
 
 31-Mar-2010 Jean-Marie Simonet
 $ Refactored com_installer ini/keys
