^$ Creating JSITE and JADMINISTRATOR keys in main ini file. Globally consolidated all keys with same value to these new keys.
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15735 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/en-GB/en-GB.ini
+++ b/administrator/language/en-GB/en-GB.ini
@@ -22,26 +22,26 @@ J30="30"
 J50="50"
 J100="100"
 
-JNO="No"
-JOFF="Off"
-JON="On"
-JYES="Yes"
-JNONE="None"
-JPREVIOUS="Previous"
-JNEXT="Next"
-JSAVE="Save"
-JCANCEL="Cancel"
-JGLOBAL_GT="&gt;"
-JGLOBAL_LT="&lt;"
-JHIDE="Hide"
-JSHOW="Show"
+JADMINISTRATOR="Administrator"
 JALL="All"
-JTRUE="True"
-JFALSE="False"
-JHIDE="Hide"
-JSHOW="Show"
+JCANCEL="Cancel"
 JDISABLED="Disabled"
 JENABLED="Enabled"
+JFALSE="False"
+JHIDE="Hide"
+JHIDE="Hide"
+JNEXT="Next"
+JNO="No"
+JNONE="None"
+JOFF="Off"
+JON="On"
+JPREVIOUS="Previous"
+JSAVE="Save"
+JSHOW="Show"
+JSHOW="Show"
+JSITE="Site"
+JTRUE="True"
+JYES="Yes"
 
 CONFIG_METADATA="Metadata configuration"
 
@@ -95,6 +95,8 @@ JSUCCESS_ORDERING_SAVED="Ordering successfully saved."
 JCONTROLLER_SAVE_SUCCESS="Item successfully saved."
 JCONTROLLER_N_ITEMS_DELETED="%s item(s) successfully deleted."
 
+JGLOBAL_GT="&gt;"
+JGLOBAL_LT="&lt;"
 JGLOBAL_ACROSS="Across"
 JGLOBAL_ALL_ARTICLE="Max Levels Articles"
 JGLOBAL_ALL_LIST="Max Levels as List"
@@ -585,7 +587,6 @@ ACCESS_LEVEL="Access Level"
 ADD="Add"
 ADMINISTRATION="Administration"
 ADMINISTRATION_MESSAGES="Administration Messages"
-ADMINISTRATOR="Administrator"
 ADMINISTRATOR_FILES="Administrator Files"
 ADVANCED_PARAMETERS="Advanced Parameters"
 ALIAS="Alias"
@@ -949,7 +950,6 @@ SETTINGS="Settings"
 SHOW="Show"
 SHOW_PAGE_TITLE="Show the Page Title"
 SHOW_HIDE_THE_PAGES_TITLE="Show/Hide the Page Title"
-SITE="Site"
 SITE_FILES="Site Files"
 SOURCE="Source"
 SPECIAL="Special"
