--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+1-April-2010 Jean-Marie Simonet
+^$ Creating JSITE and JADMINISTRATOR keys in main ini file. Globally consolidated all keys with same value to these new keys.
+
 31-Mar-2010 Mark Dexter
 ^ Implement parameters in Archived Articles menu item
 # Minor language file fixes
