--- a/installation/language/en-GB/en-GB.ini
+++ b/installation/language/en-GB/en-GB.ini
@@ -58,7 +58,8 @@ JPREVIOUS="Previous"
 JNEXT="Next"
 JCHECK_AGAIN="Check Again"
 JGLOBAL_ISFREESOFTWARE="%s is free software released under the <a href="_QQ_"http://www.gnu.org/licenses/gpl-2.0.html"_QQ_">GNU General Public License</a>."
-
+JSITE="Site"
+JADMINISTRATOR="Administrator"
 INSTL_SUCCESS_SAMPLE_DATA_LOADED="Sample Data Loaded Successfully"
 
 LIBRARIES_FORM_VALIDATOR_FIELD_REQUIRED="Field %s is required."
@@ -68,7 +69,6 @@ LIBRARIES_FORM_VALIDATOR_RULE_NOT_FOUND="No form rule could be found for field %
 ; The rest of these language strings need updating to new format."
 
 ACTUAL="Actual"
-ADMIN="Admin"
 ADMIN_LOGIN_IN_MIGRATED_CONTENT_WAS_KEPT="Admin<br />login in migrated content was kept."
 ADMIN_PASSWORD="Admin Password"
 ADMIN_PASSWORD_IN_MIGRATED_CONTENT_WAS_KEPT="Admin password in migrated content was kept."
@@ -206,7 +206,6 @@ SELECT_TYPE="Select Type"
 SESSION_AUTO_START="Session Auto Start"
 SESSION_PATH_SET="Session Path Set!"
 SESSION_PATH_WRITABLE="Session Path Writable"
-SITE="Site"
 SITE_MIGRATION="Site Migration"
 SITE_NAME="Site Name"
 SITE_PATH="Site Path"
