--- a/installation/language/en-US/en-US.ini
+++ b/installation/language/en-US/en-US.ini
@@ -55,6 +55,8 @@ JYES="Yes"
 JPREVIOUS="Previous"
 JNEXT="Next"
 JCHECK_AGAIN="Check Again"
+JSITE="Site"
+JADMINISTRATOR="Administrator"
 JGLOBAL_ISFREESOFTWARE="%s is free software released under the <a href="_QQ_"http://www.gnu.org/licenses/gpl-2.0.html"_QQ_">GNU General Public License</a>."
 
 INSTL_SUCCESS_SAMPLE_DATA_LOADED="Sample Data Loaded Successfully"
@@ -66,7 +68,6 @@ LIB_FORM_VALIDATE_FIELD_INVALID="Field %s contains invalid data."
 ; The rest of these language strings need updating to new format."
 
 ACTUAL="Actual"
-ADMIN="Admin"
 ADMIN_LOGIN_IN_MIGRATED_CONTENT_WAS_KEPT="Admin<br />login in migrated content was kept."
 ADMIN_PASSWORD="Admin Password"
 ADMIN_PASSWORD_IN_MIGRATED_CONTENT_WAS_KEPT="Admin password in migrated content was kept."
