--- a/language/en-GB/en-GB.ini
+++ b/language/en-GB/en-GB.ini
@@ -28,6 +28,10 @@ JTRUE="True"
 JFALSE="False"
 JHIDE="Hide"
 JSHOW="Show"
+JADMINISTRATOR="Administrator"
+JSITE="Site"
+
+
 JGLOBAL_USE_GLOBAL="Use Global"
 JGLOBAL_INHERIT="Inherit"
 JGLOBAL_NEWITEMSLAST_DESC="New items default to the last position. Ordering can be changed after this item has been saved."
@@ -176,7 +180,6 @@ PHPMAILER_SIGNING_ERROR="Signing error:"
 A_USER_SUBMITTED="A User submitted"
 ACCESS_DENIED="Access Denied!"
 ACCESS_FORBIDDEN="Access Forbidden!"
-ADMINISTRATOR="administrator"
 ALL="All"
 AN_ERROR_HAS_OCCURED="An error has occurred."
 AN_ERROR_HAS_OCCURRED_WHILE_PROCESSING_YOUR_REQUEST_="An error has occurred while processing your request."
