Correctly loading the language file on plugin uninstalling
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15750 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+1 April-2010 Christophe Demko
+# Correctly loading the language file on plugin uninstalling
+
 1-April-2010 Jean-Marie Simonet
 ^$ Creating JSITE and JADMINISTRATOR keys in main ini file. Globally consolidated all keys with same value to these new keys.
 
