- Removed xmlrpc library + some
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15753 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/en-GB/en-GB.ini
+++ b/administrator/language/en-GB/en-GB.ini
@@ -437,6 +437,12 @@ JLIB_VALUE_SESSION_MEMCACHE="Memory cache"
 JLIB_VALUE_SESSION_NONE="None"
 JLIB_VALUE_SESSION_XCACHE="XCache"
 
+; from libraries/joomla/html/
+; If the variable does not work in your language use following line
+; JLIB_PLEASE_MAKE_A_SELECTION_FROM_THE_LIST_TO="Please make a selection from the list"
+; instead of
+JLIB_PLEASE_MAKE_A_SELECTION_FROM_THE_LIST_TO="Please make a selection from the list to %s"
+
 ; from libraries/joomla/installer/
 JLIB_INSTALLER_ABORT="Aborting language installation: %s"
 JLIB_INSTALLER_ERROR_CREATE_FOLDER_FAILED="Failed to create directory [%s]"
@@ -869,12 +875,6 @@ PENDING="Pending"
 PERMISSIONS="Permissions"
 PLEASE_ENTER_A_NAME_FOR_THIS_MENU_ITEM="Please enter a title for this Menu Item"
 PLEASE_ENTER_A_PASSWORD="Please enter a password"
-
-; If the variable does not work in your language use following line
-; PLEASE MAKE A SELECTION FROM THE LIST TO="Please make a selection from the list
-; instead of
-
-PLEASE_MAKE_A_SELECTION_FROM_THE_LIST_TO="Please make a selection from the list to %s"
 PLEASE_MAKE_CACHE_DIRECTORY_WRITABLE="Please make the Cache directory writable."
 PLEASE_SELECT_A_CATEGORY="Please select a Category."
 PLEASE_SELECT_A_MENU="Please select a Menu"
