--- a/language/en-GB/en-GB.ini
+++ b/language/en-GB/en-GB.ini
@@ -36,18 +36,42 @@ JGLOBAL_USE_GLOBAL="Use Global"
 JGLOBAL_INHERIT="Inherit"
 JGLOBAL_NEWITEMSLAST_DESC="New items default to the last position. Ordering can be changed after this item has been saved."
 JGLOBAL_CLICK_TO_SORT_THIS_COLUMN="Click to sort by this column"
-JCOMMON_RESOURCE_NOT_FOUND="Resource not found"
+JGLOBAL_RESOURCE_NOT_FOUND="Resource not found"
 JGLOBAL_DISPLAY_NUM="Display #"
+
+; from libraries/joomla/html/
+; If the variable does not work in your language use following line
+; JLIB_PLEASE_MAKE_A_SELECTION_FROM_THE_LIST_TO="Please make a selection from the list"
+; instead of
+JLIB_PLEASE_MAKE_A_SELECTION_FROM_THE_LIST_TO="Please make a selection from the list to %s"
+
+
+JFIELD_ACCESS_DESC="Access level for this content"
+JFIELD_ACCESS_LABEL="Access"
+JFIELD_CATEGORY_DESC="Category"
+JFIELD_CATEGORY_LABEL="Category"
+JFIELD_META_DESCRIPTION_DESC="Meta data description"
+JFIELD_META_DESCRIPTION_LABEL="Description"
+JFIELD_META_KEYWORDS_DESC="Keywords describing the content"
+JFIELD_META_KEYWORDS_LABEL="Keywords"
+JFIELD_META_RIGHTS_LABEL="Rights for content"
+JFIELD_META_RIGHTS_DESC="Describe what rights others have to use this content."
+JFIELD_ORDERING_DESC="Ordering of the article within the category"
+JFIELD_ORDERING_LABEL="Ordering"
+JFIELD_PUBLISHED_DESC="Set publication state"
+JFIELD_PUBLISHED_LABEL="Published"
+JFIELD_TITLE_DESC="Title for the item"
+JFIELD_TITLE_LABEL="Title"
+JFIELD_SPACER_LABEL="<span style="_QQ_"width:auto"_QQ_"><hr /></span>"
+
+JOPTION_PUBLISHED="Published"
+JOPTION_UNPUBLISHED="Unpublished"
+
 
 JRECORD_NUMBER="Record ID: %d"
 JERROR_LOADING_FEED_DATA="Error loading feed data"
 JERROR_ALERTNOAUTHOR="You are not authorised to view this resource."
 JERROR_TABLE_BIND_FAILED="hmm %s ..."
-
-
-JOPTION_PUBLISHED="Published"
-JOPTION_UNPUBLISHED="Unpublished"
-
 
 DATE_FORMAT_LC="%A, %d %B %Y"
 DATE_FORMAT_LC1="%A, %d %B %Y"
@@ -283,12 +307,6 @@ PLEASE_ENTER_A_USER_NAME="Please enter a usermame:"
 PLEASE_ENTER_A_VALID_E_MAIL_ADDRESS="Please enter a valid e-mail address:"
 PLEASE_ENTER_YOUR_NAME="Please enter your name:"
 PLEASE_GO_TO="Please go to"
-
-; If the variable does not work in your language use following line
-; PLEASE MAKE A SELECTION FROM THE LIST TO="Please make a selection from the list"
-; instead of
-
-PLEASE_MAKE_A_SELECTION_FROM_THE_LIST_TO="Please make a selection from the list to %s"
 PLEASE_SELECT_A_NEWS_STORY_TO="Please select a news story to"
 PLEASE_SELECT_AN_ITEM_FROM_THE_LIST_TO="Please select an Item from the list to"
 PLEASE_TRY_ONE_OF_THE_FOLLOWING_PAGES="Please try one of the following pages:"
@@ -368,20 +386,3 @@ YOU_NEED_TO_LOGIN="You need to log in."
 YOUR="Your"
 
 
-JFIELD_ACCESS_DESC="Access level for this content"
-JFIELD_ACCESS_LABEL="Access"
-JFIELD_CATEGORY_DESC="Category"
-JFIELD_CATEGORY_LABEL="Category"
-JFIELD_META_DESCRIPTION_DESC="Meta data description"
-JFIELD_META_DESCRIPTION_LABEL="Description"
-JFIELD_META_KEYWORDS_DESC="Keywords describing the content"
-JFIELD_META_KEYWORDS_LABEL="Keywords"
-JFIELD_META_RIGHTS_LABEL="Rights for content"
-JFIELD_META_RIGHTS_DESC="Describe what rights others have to use this content."
-JFIELD_ORDERING_DESC="Ordering of the article within the category"
-JFIELD_ORDERING_LABEL="Ordering"
-JFIELD_PUBLISHED_DESC="Set publication state"
-JFIELD_PUBLISHED_LABEL="Published"
-JFIELD_TITLE_DESC="Title for the item"
-JFIELD_TITLE_LABEL="Title"
-JFIELD_SPACER_LABEL="<span style="_QQ_"width:auto"_QQ_"><hr /></span>"
