Fix bug #19744 of the tracker
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15758 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -28,6 +28,7 @@ $ -> Language fix or change
 ! -> Note
 
 1 April-2010 Christophe Demko
+# Fix bug #19744 of the tracker
 # Fix bug #20072 of the tracker
 # Correctly loading the language file on plugin uninstalling
 
