[#19982] JTable Improvements thanks to Jonnathan S. Lima!
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15763 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+1-April-2010 Louis Landry
+^ [#19982] JTable Improvements thanks to Jonnathan S. Lima!
+
 1 April-2010 Christophe Demko
 # Fix bug #19744 of the tracker
 # Fix bug #20072 of the tracker
