--- a/administrator/language/en-GB/en-GB.ini
+++ b/administrator/language/en-GB/en-GB.ini
@@ -77,6 +77,7 @@ JERROR_NO_ROWS_SELECTED="Publishing failed as no rows are selected"
 JERROR_SAVE_FAILED="Save failed with the following error: %s"
 JERROR_SAVE_NOT_PERMITTED="Save not permitted"
 JERROR_FILE_NOT_FOUND="The file %s could not be found."
+JERROR_TABLE_BIND_FAILED="hmm %s ..."
 JERROR_INVALID_CONTROLLER="Invalid controller"
 JERROR_INVALID_CONTROLLER_CLASS="Invalid controller class"
 
@@ -451,45 +452,6 @@ JLIB_INSTALLER_ERROR_NO_LANGUAGE_TAG="The package did not specify a language tag
 JLIB_INSTALLER_ERROR_NO_CORE_LANGUAGE="No core pack exists for the language [%s]"
 JLIB_INSTALLER_ERROR_UNKNOWN_CLIENT_TYPE="Unknown Client Type [%s]"
 JLIB_INSTALLER_ERRORXMLSETUP="No XML files were found in the install folder."
-
-; from libraries/joomla/database/table.php
-JTABLE_ERROR_BIND_FAILED_INVALID_SOURCE_ARGUMENT="%s::bind failed. Invalid source argument."
-JTABLE_ERROR_CHECKIN_FAILED="%s::checkIn failed - %s"
-JTABLE_ERROR_CHECKOUT_FAILED="%s::checkOut failed - %s"
-JTABLE_ERROR_CLASS_DOES_NOT_SUPPORT_ORDERING="%s does not support ordering."
-JTABLE_ERROR_CLASS_NOT_FOUND_IN_FILE="Table class %s not found in file."
-JTABLE_ERROR_DELETE_FAILED="%s::delete failed - %s"
-JTABLE_ERROR_GET_NEXT_ORDER_FAILED="%s::getNextOrder failed - %s"
-JTABLE_ERROR_HIT_FAILED="%s::hit failed - %s"
-JTABLE_ERROR_MOVE_FAILED="%s::move failed - %s"
-JTABLE_ERROR_NOT_SUPPORTED_FILE_NOT_FOUND="Table %s not supported. File not found."
-JTABLE_ERROR_NULL_PRIMARY_KEY="Null primary key not allowed."
-JTABLE_ERROR_PUBLISH_FAILED="%s::publish failed - %s"
-JTABLE_ERROR_REORDER_FAILED="%s::reorder failed - %s"
-JTABLE_ERROR_REORDER_UPDATE_ROW_FAILED="%s::reorder update the row %s failed - %s"
-JTABLE_ERROR_STORE_FAILED="%s::store failed - %s"
-JTABLE_ERROR_STORE_FAILED_UPDATE_ASSET_ID="The asset_id field could not be updated"
-
-; from libraries/joomla/database/tablenested.php
-JTABLENESTED_ERROR_GET_TREE_FAILED="%s::getTree Failed - %s"
-JTABLENESTED_ERROR_INVALID_LOCATION="%s::setLocation - Invalid location"
-JTABLENESTED_ERROR_MOVE_FAILED="%s::move Failed - %s"
-JTABLENESTED_ERROR_INVALID_NODE_RECURSION="%s::move Failed - Cannot move the node to be a child of itself"
-JTABLENESTED_ERROR_DELETE_FAILED="%s::delete Failed - %s"
-JTABLENESTED_ERROR_CHECK_FAILED="%s::check Failed - %s"
-JTABLENESTED_ERROR_INVALID_PARENT_ID="Invalid parent id."
-JTABLENESTED_ERROR_STORE_FAILED="%s::store Failed - %s"
-JTABLENESTED_ERROR_NO_ROWS_SELECTED="No rows selected."
-JTABLENESTED_ERROR_CHILD_ROWS_CHECKED_OUT="Child rows checked out."
-JTABLENESTED_ERROR_PUBLISH_FAILED="%s::publish Failed - %s"
-JTABLENESTED_ERROR_ANCESTOR_NODES_LOWER_PUBLISHED_STATE
-JTABLENESTED_ERROR_ORDERUP_FAILED="%s::orderUp Failed - %s"
-JTABLENESTED_ERROR_ORDERDOWN_FAILED="%s::orderDown Failed - %s"
-JTABLENESTED_ERROR_GETROOTID_FAILED="%s::getRootId Failed - %s"
-JTABLENESTED_ERROR_ROOT_NODE_NOT_FOUND="Root node not found."
-JTABLENESTED_ERROR_REBUILD_FAILED="%s::rebuild Failed - %s"
-JTABLENESTED_ERROR_REBUILDPATH_FAILED="%s::rebuildPath Failed - %s"
-JTABLENESTED_ERROR_GETNODE_FAILED="%s::_getNode Failed - %s"
 
 JLIB_DELETE_FAILED="Failed deleting %s"
 ;
