--- a/administrator/language/en-GB/en-GB.com_redirect.ini
+++ b/administrator/language/en-GB/en-GB.com_redirect.ini
@@ -6,46 +6,69 @@
 
 COM_REDIRECT="Redirect Manager"
 COM_REDIRECT_CONFIGURATION="Redirect Manager Options"
-COM_REDIR_XML_DESCRIPTION="This component implements link redirection"
+COM_REDIRECT_XML_DESCRIPTION="This component implements link redirection"
 
-COM_REDIR_MANAGER_LINKS="Redirect Manager: Links"
-COM_REDIR_PLUGIN_DISABLED="The Redirect Plug-in is disabled. Enable it in the Plug-in Manager."
-COM_REDIR_PLUGIN_ENABLED="The Redirect Plug-in is enabled."
-COM_REDIR_SEARCH_LINKS="Search in link fields."
+COM_REDIRECT_MANAGER_LINKS="Redirect Manager: Links"
+COM_REDIRECT_PLUGIN_DISABLED="The Redirect Plug-in is disabled. Enable it in the Plug-in Manager."
+COM_REDIRECT_PLUGIN_ENABLED="The Redirect Plug-in is enabled."
+COM_REDIRECT_SEARCH_LINKS="Search in link fields."
 
-COM_REDIR_HEADING_CREATED_DATE="Created Date"
-COM_REDIR_HEADING_NEW_URL="New URL"
-COM_REDIR_HEADING_OLD_URL="Expired URL"
-COM_REDIR_HEADING_REFERRER="Referring Page"
+COM_REDIRECT_HEADING_CREATED_DATE="Created Date"
+COM_REDIRECT_HEADING_NEW_URL="New URL"
+COM_REDIRECT_HEADING_OLD_URL="Expired URL"
+COM_REDIRECT_HEADING_REFERRER="Referring Page"
 
-COM_REDIR_HEADING_UPDATE_LINKS="Update selected links to the following new URL"
-COM_REDIR_BUTTON_UPDATE_LINKS="Update Links"
+COM_REDIRECT_HEADING_UPDATE_LINKS="Update selected links to the following new URL"
+COM_REDIRECT_BUTTON_UPDATE_LINKS="Update Links"
 
-COM_REDIR_MANAGER_LINK="Redirect Manager: Link"
+COM_REDIRECT_MANAGER_LINK="Redirect Manager: Link"
 
-COM_REDIR_NEW_LINK="New Link"
-COM_REDIR_EDIT_LINK="Edit Link #%d"
-COM_REDIR_OPTIONS="Options"
-COM_REDIR_DETAILS="Details"
+COM_REDIRECT_NEW_LINK="New Link"
+COM_REDIRECT_EDIT_LINK="Edit Link #%d"
+COM_REDIRECT_OPTIONS="Options"
+COM_REDIRECT_DETAILS="Details"
 
 ; File: /models/forms/link.xml and default_addform.php"
-COM_REDIR_FIELD_CREATED_DATE_LABEL="Created Date"
-COM_REDIR_FIELD_UPDATED_DATE_LABEL="Last Updated Date"
-COM_REDIR_FIELD_REFERRER_LABEL="Link Referrer"
-COM_REDIR_FIELD_COMMENT_LABEL="Comment"
-COM_REDIR_FIELD_COMMENT_DESC="Sometimes it is helpful to describe the URLs for redirect management later on."
-COM_REDIR_FIELD_NEW_URL_LABEL="Destination URL"
-COM_REDIR_FIELD_NEW_URL_DESC="Enter here the url to be redirected to."
-COM_REDIR_FIELD_OLD_URL_LABEL="Source URL"
-COM_REDIR_FIELD_OLD_URL_DESC="Enter here the url that has to be redirected."
+COM_REDIRECT_FIELD_CREATED_DATE_LABEL="Created Date"
+COM_REDIRECT_FIELD_UPDATED_DATE_LABEL="Last Updated Date"
+COM_REDIRECT_FIELD_REFERRER_LABEL="Link Referrer"
+COM_REDIRECT_FIELD_COMMENT_LABEL="Comment"
+COM_REDIRECT_FIELD_COMMENT_DESC="Sometimes it is helpful to describe the URLs for redirect management later on."
+COM_REDIRECT_FIELD_NEW_URL_LABEL="Destination URL"
+COM_REDIRECT_FIELD_NEW_URL_DESC="Enter here the url to be redirected to."
+COM_REDIRECT_FIELD_OLD_URL_LABEL="Source URL"
+COM_REDIRECT_FIELD_OLD_URL_DESC="Enter here the url that has to be redirected."
 
 ; File: /models/link.php"
-COM_REDIR_REDIRECTED_ON="Redirected on: %s."
+COM_REDIRECT_REDIRECTED_ON="Redirected on: %s."
 
 ; File: /tables/link.php"
-COM_REDIR_ERROR_DESTINATION_URL_REQUIRED="The redirect must have a destination URL"
-COM_REDIR_ERROR_SOURCE_URL_REQUIRED="The redirect must have a source URL"
-COM_REDIR_ERROR_DUPLICATE_URLS="The source and destination URLs cannot be the same."
+COM_REDIRECT_ERROR_DESTINATION_URL_REQUIRED="The redirect must have a destination URL"
+COM_REDIRECT_ERROR_SOURCE_URL_REQUIRED="The redirect must have a source URL"
+COM_REDIRECT_ERROR_DUPLICATE_URLS="The source and destination URLs cannot be the same."
 
-COM_REDIR_N_LINKS_UPDATED="%d link(s) updated."
-COM_REDIR_LINK_UPDATED="1 link has been updated"
+; File: /helpers/html/redirect.php
+COM_REDIRECT_ENABLED="Enabled"
+COM_REDIRECT_DISABLED="Disabled"
+COM_REDIRECT_TRASHED="Trashed"
+COM_REDIRECT_UNARCHIVE_LINK="Remove from archive status"
+COM_REDIRECT_ARCHIVED="Archived"
+COM_REDIRECT_DISABLE_LINK="Disable Link"
+COM_REDIRECT_ENABLE_LINK="Enable Link"
+
+; File: /controllers/links.php
+COM_REDIRECT_NO_LINK_SELECTED="No link selected"
+COM_REDIRECT_LINK_DELETED="Link successfully deleted"
+COM_REDIRECT_N_LINKS_DELETED="%d links successfully deleted"
+COM_REDIRECT_NO_LINK_SELECTED="No links selected"
+COM_REDIRECT_LINK_PUBLISHED="Link successfully published"
+COM_REDIRECT_N_LINKS_PUBLISHED="%d links successfully published"
+COM_REDIRECT_LINK_UNPUBLISHED="Link successfully unpublished"
+COM_REDIRECT_N_LINKS_UNPUBLISHED="%d links successfully unpublished"
+COM_REDIRECT_LINK_ARCHIVED="Link successfully archived"
+COM_REDIRECT_N_LINKS_ARCHIVED="%d links successfully archived"
+COM_REDIRECT_LINK_TRASHED="Link successfully trashed"
+COM_REDIRECT_N_LINKS_TRASHED="%d links successfully trashed"
+
+COM_REDIRECT_N_LINKS_UPDATED="%d link(s) updated."
+COM_REDIRECT_LINK_UPDATED="1 link has been updated"
