--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+02-Apr-2010 Jean-Marie Simonet
+$ Refactoring com_redirect ini/keys
+
 01-Apr-2010 Mark Dexter
 # Fix bug processing content plugin in single-article
 
