--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+02-Apr-2010 Louis Landry
+^ [#19982] JTable Improvements thanks to Jonnathan S. Lima!
+
 02-Apr-2010 Jean-Marie Simonet
 $ Refactoring com_redirect ini/keys
 
