$^+ Consolidating some keys with same value to a unique key in main inis. WIP
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15812 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/language/en-GB/en-GB.ini
+++ b/language/en-GB/en-GB.ini
@@ -7,7 +7,7 @@
 ; Date format
 
 JERROR_PARSING_LANGUAGE_FILE="&nbsp;: error(s) in line(s) %s"
-LIB_FORM_VALIDATE_FIELD_REQUIRED="Field required: %s"
+JLIB_FORM_VALIDATE_FIELD_REQUIRED="Field required: %s"
 
 JNO="No"
 JOFF="Off"
@@ -23,14 +23,16 @@ JGLOBAL_LT="&lt;"
 JHIDE="Hide"
 JSHOW="Show"
 JALL="All"
-JOPTION_ALL="All"
 JTRUE="True"
 JFALSE="False"
 JHIDE="Hide"
 JSHOW="Show"
 JADMINISTRATOR="Administrator"
 JSITE="Site"
-
+JPUBLISHED="Published"
+JUNPUBLISHED="Unpublished"
+JDISABLED="Disabled"
+JENABLED="Enabled"
 
 JGLOBAL_USE_GLOBAL="Use Global"
 JGLOBAL_INHERIT="Inherit"
@@ -64,8 +66,7 @@ JFIELD_TITLE_DESC="Title for the item"
 JFIELD_TITLE_LABEL="Title"
 JFIELD_SPACER_LABEL="<span style="_QQ_"width:auto"_QQ_"><hr /></span>"
 
-JOPTION_PUBLISHED="Published"
-JOPTION_UNPUBLISHED="Unpublished"
+
 
 
 JRECORD_NUMBER="Record ID: %d"
@@ -316,7 +317,6 @@ PREVIEW="Preview"
 PRINT="Print"
 PUBLIC="Public"
 PUBLISH="Publish"
-PUBLISHED="Published"
 PUBLISHED_DATE="Published on %s"
 READMORE="Read more"
 READ_MORE="Read more..."
@@ -354,7 +354,6 @@ UNABLE_TO_CONNECT_TO_THE_DATABASE="Unable to connect to the database:"
 UNARCHIVE="Unarchive"
 UNKNOWN="Unknown"
 UNPUBLISH="Unpublish"
-UNPUBLISHED="Unpublished"
 UNWRITABLE="Unwritable"
 UPLOAD_IMAGE="Upload Image"
 USER_SUBMITTED="User Submitted"
