--- a/administrator/language/en-GB/en-GB.ini
+++ b/administrator/language/en-GB/en-GB.ini
@@ -7,7 +7,6 @@
 ; Common boolean values
 ; Note: YES, NO, TRUE, FALSE are reserved words in INI format.
 JERROR_PARSING_LANGUAGE_FILE="&nbsp;: error(s) in line(s) %s"
-LIB_FORM_VALIDATE_FIELD_REQUIRED="Field required: %s"
 
 J1="1"
 J2="2"
@@ -24,11 +23,11 @@ J100="100"
 
 JADMINISTRATOR="Administrator"
 JALL="All"
+JARCHIVED="Archived"
 JCANCEL="Cancel"
 JDISABLED="Disabled"
 JENABLED="Enabled"
 JFALSE="False"
-JHIDE="Hide"
 JHIDE="Hide"
 JNEXT="Next"
 JNO="No"
@@ -36,11 +35,15 @@ JNONE="None"
 JOFF="Off"
 JON="On"
 JPREVIOUS="Previous"
+JPUBLISHED="Published"
 JSAVE="Save"
 JSHOW="Show"
-JSHOW="Show"
 JSITE="Site"
+JTRASH="Trash"
+JTRASHED="Trashed"
 JTRUE="True"
+JUNARCHIVE="Remove from archive status"
+JUNPUBLISHED="Unpublished"
 JYES="Yes"
 
 CONFIG_METADATA="Metadata configuration"
@@ -195,7 +198,6 @@ JGLOBAL_PAGINATION_RESULTS_LABEL="Pagination Results"
 JGLOBAL_PASSWORD="Password"
 JGLOBAL_PASSWORD="Password"
 JGLOBAL_PREVIEW="Preview"
-JGLOBAL_PUBLISHED="Published"
 JGLOBAL_RIGHT="Right"
 JGLOBAL_SHOW_AUTHOR_DESC="If set to Show, the Name of the article's Author will be displayed.  This a global setting but can be changed at the Category, Menu and Article levels."
 JGLOBAL_SHOW_AUTHOR_LABEL="Show Author"
@@ -256,7 +258,6 @@ JGRID_HEADING_ID="ID"
 JGRID_HEADING_LANGUAGE="Language"
 JGRID_HEADING_MENU_ITEM_TYPE="Menu Item Type"
 JGRID_HEADING_ORDERING="Ordering"
-JGRID_HEADING_PUBLISHED="Published"
 JGRID_HEADING_ROW_NUMBER="#"
 JGRID_HEADING_TITLE="Title"
 JGRID_CHECKBOX_ROW_N="Checkbox for row %d"
@@ -326,16 +327,7 @@ JACTION_MANAGE_COMPONENT_DESC="Manage Component Desc"
 JFORM_SELECT_USER="Select a User"
 JFORM_CHANGE_USER="Change User"
 JFORM_CHANGE_USER_BUTTON="Change User"
-
-JOPTION_ALL="All"
 JOPTION_ANY="Any"
-JOPTION_ARCHIVED="Archived"
-JOPTION_DISABLED="Disabled"
-JOPTION_ENABLED="Enabled"
-JOPTION_PUBLISHED="Published"
-JOPTION_TRASH="Trash"
-JOPTION_TRASHED="Trashed"
-JOPTION_UNPUBLISHED="Unpublished"
 JOPTION_REPORTED="Reported"
 JOPTION_SELECT_ACCESS="- Select Access -"
 JOPTION_SELECT_CATEGORY="- Select Category -"
@@ -354,8 +346,6 @@ JOPTION_USE_MENU_REQUEST_SETTING="- Use Menu or Request Setting -"
 JOPTION_FROM_DEFAULT_TEMPLATE="From Default Template"
 JOPTION_NO_CATEGORY="- No Category -"
 JOPTION_ALL_CATEGORIES="- All Categories -"
-JOPTION_HIDE="Hide"
-JOPTION_SHOW="Show"
 JOPTION_REQUIRED="Required"
 JOPTION_OPTIONAL="Optional"
 JOPTION_DEFAULT_LANGUAGE="- Default -"
@@ -366,17 +356,10 @@ JOPTION_UNASSIGNED="Unassigned"
 JGRID_MOVE_DOWN="Move Down"
 JGRID_MOVE_UP="Move Up"
 
-JSTATE_PUBLISHED="Published"
 JSTATE_PUBLISH_ITEM="Publish Item"
-JSTATE_UNPUBLISHED="Unpublished"
 JSTATE_UNPUBLISH_ITEM="Unpublish Item"
-JSTATE_TRASHED="Trashed"
-JSTATE_UNARCHIVE_ITEM="Remove from archive status"
-JSTATE_ARCHIVED="Archived"
 JSTATE_DISABLE_ITEM="Disable Item"
-JSTATE_ENABLED="Enabled"
 JSTATE_ENABLE_ITEM="Enable Item"
-JSTATE_DISABLED="Disabled"
 
 JSEARCH_FILTER_LABEL="Filter"
 JSEARCH_FILTER_CLEAR="Clear"
@@ -417,9 +400,7 @@ JBROWSERTARGET_NEW="Open in new window"
 JBROWSERTARGET_PARENT="Open in parent window"
 JBROWSERTARGET_POPUP="Open in popup"
 
-LIBRARIES_FORM_VALIDATOR_FIELD_REQUIRED="Field %s is required."
 LIBRARIES_FORM_VALIDATOR_FIELD_INVALID="Field %s contains invalid data."
-LIBRARIES_FORM_VALIDATOR_RULE_NOT_FOUND="No form rule could be found for field %s."
 
 CONFIG__DEFAULT="Default Options"
 
@@ -428,7 +409,6 @@ JLIB_VALUE_CACHE_EACCELERATOR="eAccelerator"
 JLIB_VALUE_CACHE_FILE="File"
 JLIB_VALUE_CACHE_MEMCACHE="Memory cache"
 JLIB_VALUE_CACHE_XCACHE="XCache"
-
 JLIB_VALUE_SESSION_APC="Alternative PHP Cache"
 JLIB_VALUE_SESSION_DATABASE="Database"
 JLIB_VALUE_SESSION_EACCELERATOR="eAccelerator"
@@ -487,7 +467,10 @@ JLIB_DATABASE_ERROR_REBUILD_FAILED="%s::rebuild Failed - %s"
 JLIB_DATABASE_ERROR_REBUILDPATH_FAILED="%s::rebuildPath Failed - %s"
 JLIB_DATABASE_ERROR_ROOT_NODE_NOT_FOUND="Root node not found."
 
-JLIB_DELETE_FAILED="Failed deleting %s"
+JLIB_FILESYSTEM_DELETE_FAILED="Failed deleting %s"
+
+; from libraries/joomla/form/form.php
+JLIB_FORM_VALIDATE_FIELD_REQUIRED="Field required: %s"
 ;
 ; Old string format
 ;
@@ -640,7 +623,6 @@ AN_ERROR_HAS_OCCURRED="An error has occurred."
 ANOTHER_TEMPLATE_IS_ALREADY_USING_DIRECTORY="There is already a Template using the named directory. Are you trying to load the same template again?"
 APPLY="Apply"
 ARCHIVE="Archive"
-ARCHIVED="Archived"
 ARCHIVED_ARTICLE_LIST_LAYOUT_DESC="Archived Article List Layout"
 ARTICLE_PREVIEW="Article Preview"
 ASSIGN="Assign"
@@ -1034,7 +1016,6 @@ UNABLE_TO_REMOVE_THE_COMPONENT_SITE_DIRECTORY="Unable to remove the component si
 UNKNOWN_METHOD_MODEL_METHOD_WAS_NOT_FOUND="Unknown Method $model::$method() was not found"
 UNPUBLISH="Unpublish"
 UNPUBLISH_ITEM="Unpublish Item"
-UNPUBLISHED="Unpublished"
 UNWRITABLE="Unwritable"
 UP="up"
 UPLOAD="Upload"
