--- a/administrator/language/xx-XX/xx-XX.ini
+++ b/administrator/language/xx-XX/xx-XX.ini
@@ -10,8 +10,6 @@
 
 ; Common boolean values
 ; Note: YES, NO, TRUE, FALSE are reserved words in INI format.
-JDISABLED="Disabled"
-JENABLED="Enabled"
 
 J5="5"
 J10="10"
@@ -22,16 +20,25 @@ J30="30"
 J50="50"
 J100="100"
 
+JADMINISTRATOR="Administrator"
 JALL="All"
-JNO="No"
-JYES="Oui"
-JTRUE="True"
+JARCHIVED="Archived"
+JCANCEL="Cancel"
+JDISABLED="Disabled"
+JENABLED="Enabled"
 JFALSE="False"
 JHIDE="Hide"
-JSHOW="Show"
-JGLOBAL_USE_GLOBAL="Use Global"
-JGLOBAL_INHERIT="Inherit"
-JRECORD_NUMBER="Record ID: %d"
+JNEXT="Next"
+JNO="No"
+JNONE="None"
+JOFF="Off"
+JON="On"
+JPREVIOUS="Previous"
+JPUBLISHED="Published"
+JSAVE="Save"
+JTRASH="Trash"
+JUNPUBLISHED="Unpublished"
+JYES="Yes"
 
 JCONFIG_PERMISSIONS_LABEL="Permissions"
 JCONFIG_PERMISSIONS_DESC="Default permissions used for all content in this component."
@@ -88,7 +95,6 @@ JGRID_HEADING_ID="ID"
 JGRID_HEADING_LANGUAGE="Language"
 JGRID_HEADING_MENU_ITEM_TYPE="Menu Item Type"
 JGRID_HEADING_ORDERING="Ordering"
-JGRID_HEADING_PUBLISHED="Published"
 JGRID_HEADING_ROW_NUMBER="#"
 JGRID_HEADING_TITLE="Title"
 JGRID_CHECKBOX_ROW_N="Checkbox for row %d"
@@ -149,16 +155,8 @@ JACTION_MANAGE_COMPONENT_DESC="Manage Component Desc"
 JFORM_SELECT_USER="Select a Utilisateur"
 JFORM_CHANGE_USER="Change Utilisateur"
 JFORM_CHANGE_USER_BUTTON="Change Utilisateur"
-
-JOPTION_ALL="All"
 JOPTION_ANY="Any"
-JOPTION_ARCHIVED="Archived"
-JOPTION_DISABLED="Disabled"
-JOPTION_ENABLED="Enabled"
-JOPTION_PUBLISHED="Published"
-JOPTION_TRASH="Trash"
-JOPTION_TRASHED="Trashed"
-JOPTION_UNPUBLISHED="Unpublished"
+JDISABLED="Disabled"
 JOPTION_REPORTED="Reported"
 JOPTION_SELECT_ACCESS="- Select Access -"
 JOPTION_SELECT_CATEGORY="- Select Category -"
@@ -173,7 +171,6 @@ JOPTION_USE_MENU_REQUEST_SETTING="- Use Menu or Request Setting -"
 JOPTION_FROM_DEFAULT_TEMPLATE="From Default Template"
 JOPTION_NO_CATEGORY="- No Category -"
 JOPTION_HIDE="Hide"
-JOPTION_SHOW="Show"
 JOPTION_REQUIRED="Required"
 JOPTION_OPTIONAL="Optional"
 JOPTION_DEFAULT_LANGUAGE="- Default -"
@@ -183,17 +180,10 @@ JOPTION_SELECT_MENU="- Select menu -"
 JGRID_MOVE_DOWN="Move Down"
 JGRID_MOVE_UP="Move Up"
 
-JSTATE_PUBLISHED="Published"
 JSTATE_PUBLISH_ITEM="Publish Item"
-JSTATE_UNPUBLISHED="Unpublished"
 JSTATE_UNPUBLISH_ITEM="Unpublish Item"
-JSTATE_TRASHED="Trashed"
-JSTATE_ARCHIVED="Archived"
 JSTATE_DISABLE_ITEM="Disable Item"
-JSTATE_ENABLED="Enabled"
 JSTATE_ENABLE_ITEM="Enable Item"
-JSTATE_DISABLED="Disabled"
-
 JSEARCH_FILTER_LABEL="Filter"
 JSEARCH_FILTER_CLEAR="Clear"
 JSEARCH_FILTER_SUBMIT="Search"
@@ -224,9 +214,7 @@ JBROWSERTARGET_NEW="New"
 JBROWSERTARGET_PARENT="Parent"
 JBROWSERTARGET_POPUP="Popup"
 
-LIBRARIES_FORM_VALIDATOR_FIELD_REQUIRED="Field %s is required."
-LIBRARIES_FORM_VALIDATOR_FIELD_INVALID="Field %s contains invalid data."
-LIBRARIES_FORM_VALIDATOR_RULE_NOT_FOUND="No form rule could be found for field %s."
+JLIB_FORM_VALIDATE_FIELD_INVALID="Field %s contains invalid data."
 
 JCONTROLLER_N_ITEMS_DELETED="%s item(s) successfully deleted."
 
@@ -387,7 +375,6 @@ AN_ERROR_HAS_OCCURRED="An error has occurred."
 ANOTHER_TEMPLATE_IS_ALREADY_USING_DIRECTORY="There is already a Template using the named directory. Are you trying to load the same template again?"
 APPLY="Apply"
 ARCHIVE="Archive"
-ARCHIVED="Archived"
 ARCHIVED_ARTICLE_LIST_LAYOUT_DESC="Archived Article List Layout"
 ARTICLES="Articles"
 ARTICLE_PREVIEW="Article Preview"
@@ -804,7 +791,6 @@ UNABLE_TO_REMOVE_THE_COMPONENT_SITE_DIRECTORY="Unable to remove the component si
 UNKNOWN_METHOD_MODEL_METHOD_WAS_NOT_FOUND="Unknown Method $model::$method() was not found"
 UNPUBLISH="Unpublish"
 UNPUBLISH_ITEM="Unpublish Item"
-UNPUBLISHED="Unpublished"
 UNWRITABLE="Unwritable"
 UP="up"
 UPLOAD="Upload"
