--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+03-Apr-2010 Jean-Marie Simonet
+$^+ Consolidating some keys with same value to a unique key in main inis. WIP
+
 02-Apr-2010 Louis Landry
 ^ [#19982] JTable Improvements thanks to Jonnathan S. Lima!
 
