#$ Missing string. Bug [20098]. Thank you Klas.
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15815 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 03-Apr-2010 Jean-Marie Simonet
 $^+ Consolidating some keys with same value to a unique key in main inis. WIP
+#$ Missing string + bug [20098]. Thank you Klas.
 
 02-Apr-2010 Louis Landry
 ^ [#19982] JTable Improvements thanks to Jonnathan S. Lima!
