Finish JString unit tests
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15816 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/tests/CHANGELOG
+++ b/tests/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+04-Apr-2010 Mark Dexter
+^ Finish JString unit tests
+
 31-Mar-2010 Mark Dexter
 # Minor fixes to control panel tests for changed wording on menus
 
