--- a/tests/CHANGELOG
+++ b/tests/CHANGELOG
@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 04-Apr-2010 Mark Dexter
 ^ Finish JString unit tests
+^ Fix up code coverage for JString unit tests
 
 31-Mar-2010 Mark Dexter
 # Minor fixes to control panel tests for changed wording on menus
