--- a/tests/CHANGELOG
+++ b/tests/CHANGELOG
@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+05-Apr-2010 Mark Dexter
++ Add phpunit.php files to system and unit folders to enable test debugging
+
 04-Apr-2010 Mark Dexter
 ^ Finish JString unit tests
 ^ Fix up code coverage for JString unit tests
