$^+ Consolidating some keys with same value to a unique key in main inis. WIP
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15837 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/en-GB/en-GB.ini
+++ b/administrator/language/en-GB/en-GB.ini
@@ -25,6 +25,8 @@ JADMINISTRATOR="Administrator"
 JALL="All"
 JARCHIVED="Archived"
 JCANCEL="Cancel"
+JAUTHOR="Author"
+JDATE="Date"
 JDISABLED="Disabled"
 JENABLED="Enabled"
 JFALSE="False"
@@ -42,6 +44,7 @@ JSITE="Site"
 JTRASH="Trash"
 JTRASHED="Trashed"
 JTRUE="True"
+JVERSION="Version"
 JUNARCHIVE="Remove from archive status"
 JUNPUBLISHED="Unpublished"
 JYES="Yes"
@@ -252,7 +255,6 @@ JGLOBAL_WARNJAVASCRIPT="Warning! JavaScript must be enabled for proper operation
 JGRID_HEADING_ACCESS="Access"
 JGRID_HEADING_CATEGORY="Category"
 JGRID_HEADING_CREATED_BY="Created by"
-JGRID_HEADING_ENABLED="Enabled"
 JGRID_HEADING_HITS="Hits"
 JGRID_HEADING_ID="ID"
 JGRID_HEADING_LANGUAGE="Language"
@@ -291,7 +293,6 @@ JFIELD_PUBLISHED_LABEL="Published State"
 JFIELD_TITLE_DESC="Title"
 JFIELD_TITLE_LABEL="Title"
 JFIELD_METADATA_AUTHOR_DESC="The author of this content"
-JFIELD_METADATA_AUTHOR_LABEL="Author"
 JFIELD_METADATA_RIGHTS_DESC="Publication rights for the content"
 JFIELD_METADATA_RIGHTS_LABEL="Rights"
 JFIELD_METADATA_ROBOTS_DESC="Robots Instructions"
@@ -304,7 +305,6 @@ JFIELD_MODULE_LANGUAGE_DESC="Assign a language to this module."
 JFIELD_CATEGORY_LANGUAGE_DESC="Assign a language to this category."
 JFIELD_OPTION_NONE="None"
 JFIELD_ENABLED_DESC="The enabled state of this item"
-JFIELD_ENABLED_LABEL="Enabled"
 JFIELD_SPACER_LABEL="<span style="_QQ_"width:auto"_QQ_"><hr /></span>"
 
 JACTION_USER_GROUP="User Group"
@@ -678,7 +678,6 @@ CREATED="Created"
 MODIFIED="Modified"
 PUBLISHED="Published"
 CURRENT="Current"
-DATE="Date"
 DEFAULT="Default"
 DELETE="Delete"
 DELETED="Deleted"
@@ -690,7 +689,6 @@ DESCUSEVALIDLOGIN="Use a valid username and password to gain access to the Admin
 DETAILS="Details"
 DIRECTORY_PERMISSIONS="Directory Permissions"
 DISABLE="Disable"
-DISABLED="Disabled"
 DISPLAY_NUM="Display #"
 DO_NOT_USE="None Selected"
 DONE="Done"
@@ -709,7 +707,6 @@ EDIT_XML="Edit&nbsp;XML"
 EDIT_XML_FILE="Edit XML File"
 EMAIL="E-mail"
 ENABLE="Enable"
-ENABLED="Enabled"
 ENABLE_PLUGIN="Enable Plug-in"
 END="End"
 END_PAGE="End Page"
@@ -1031,7 +1028,6 @@ VALIDALPHANOSPACES="File name must only contain alphanumeric characters and no s
 VALIDDELETEITEMS="Are you sure you want to delete the selected Items?"
 VALIDUSERPASS="Incorrect username and/or password. Please try again."
 VALIDUSERPASSACCESS="Incorrect username, password or access level.  Please try again."
-VERSION="Version"
 VIEW="View"
 VIEW_ALL="View All"
 VIEW_SITE="View site"
