--- a/administrator/language/xx-XX/xx-XX.com_users.ini
+++ b/administrator/language/xx-XX/xx-XX.com_users.ini
@@ -96,7 +96,7 @@ USERS_SEARCH_IN_NAME="Search in name"
 
 USERS_HEADING_ACTIVATED="Activated"
 USERS_HEADING_EMAIL="Email"
-USERS_HEADING_ENABLED="Enabled"
+JENABLED="Enabled"
 USERS_HEADING_GROUPS="Groups"
 USERS_HEADING_LAST_VISIT_DATE="Last Visit Date"
 USERS_HEADING_USERNAME="Utilisateurname"
