--- a/language/en-GB/en-GB.ini
+++ b/language/en-GB/en-GB.ini
@@ -11,8 +11,10 @@ JLIB_FORM_VALIDATE_FIELD_REQUIRED="Field required: %s"
 
 JNO="No"
 JOFF="Off"
+JAUTHOR="Author"
 JON="On"
 JYES="Yes"
+JDATE="Date"
 JNONE="None"
 JPREVIOUS="Previous"
 JNEXT="Next"
