--- a/administrator/language/xx-XX/xx-XX.ini
+++ b/administrator/language/xx-XX/xx-XX.ini
@@ -23,6 +23,7 @@ J100="100"
 JADMINISTRATOR="Administrator"
 JALL="All"
 JARCHIVED="Archived"
+JAUTHOR="Author"
 JCANCEL="Cancel"
 JDISABLED="Disabled"
 JENABLED="Enabled"
@@ -89,7 +90,7 @@ JSHOW="Show"
 JGRID_HEADING_ACCESS="Access"
 JGRID_HEADING_CATEGORY="Category"
 JGRID_HEADING_CREATED_BY="Created by"
-JGRID_HEADING_ENABLED="Enabled"
+JENABLED="Enabled"
 JGRID_HEADING_HITS="Hits"
 JGRID_HEADING_ID="ID"
 JGRID_HEADING_LANGUAGE="Language"
@@ -122,7 +123,6 @@ JFIELD_PUBLISHED_LABEL="Published State"
 JFIELD_TITLE_DESC="Title"
 JFIELD_TITLE_LABEL="Title"
 JFIELD_METADATA_AUTHOR_DESC="The author of this content"
-JFIELD_METADATA_AUTHOR_LABEL="Author"
 JFIELD_METADATA_RIGHTS_DESC="Publication rights for the content"
 JFIELD_METADATA_RIGHTS_LABEL="Rights"
 JFIELD_METADATA_ROBOTS_DESC="Robots Instructions"
@@ -133,7 +133,7 @@ JFIELD_LANGUAGE_DESC="The language that the article is written in."
 JFIELD_LANGUAGE_LABEL="Language"
 JFIELD_OPTION_NONE="None"
 JFIELD_ENABLED_DESC="The enabled state of this item"
-JFIELD_ENABLED_LABEL="Enabled"
+JENABLED="Enabled"
 
 JACTION_USER_GROUP="Utilisateur Group"
 JACTION_ADMIN="Admin"
@@ -433,7 +433,6 @@ CREATED="Created"
 MODIFIED="Modified"
 PUBLISHED="Published"
 CURRENT="Current"
-DATE="Date"
 DEFAULT="Default"
 DELETE="Delete"
 DELETED="Deleted"
@@ -807,7 +806,6 @@ VALIDALPHANOSPACES="File name must only contain alphanumeric characters and no s
 VALIDDELETEITEMS="Are you sure you want to delete the selected Items?"
 VALIDUSERPASS="Incorrect username and/or password. Please try again."
 VALIDUSERPASSACCESS="Incorrect username, password or access level.  Please try again."
-VERSION="Version"
 VIEW="View"
 VIEW_ALL="View All"
 VIEW_SITE="View site"
