--- a/installation/CHANGELOG
+++ b/installation/CHANGELOG
@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 05-Apr-2010 Jean-Marie Simonet
 $^+ Consolidating some keys with same value to a unique key in main inis. WIP
+# Fixed [19972]
 
 05-Apr-2010 Andrew Eddie
  # Fix bug in JCache constructor.
