$ Adding missing value to key.
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15886 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/language/en-GB/en-GB.ini
+++ b/administrator/language/en-GB/en-GB.ini
@@ -451,7 +451,7 @@ JLIB_DATABASE_ERROR_STORE_FAILED="%s::store failed - %s"
 JLIB_DATABASE_ERROR_STORE_FAILED_UPDATE_ASSET_ID="The asset_id field could not be updated"
 
 ; from libraries/joomla/database/tablenested.php
-JLIB_DATABASE_ERROR_ANCESTOR_NODES_LOWER_PUBLISHED_STATE
+JLIB_DATABASE_ERROR_ANCESTOR_NODES_LOWER_PUBLISHED_STATE="%s: cannot publish items with unpublished parents"
 JLIB_DATABASE_ERROR_CHECK_FAILED="%s::check Failed - %s"
 JLIB_DATABASE_ERROR_CHILD_ROWS_CHECKED_OUT="Child rows checked out."
 JLIB_DATABASE_ERROR_GET_TREE_FAILED="%s::getTree Failed - %s"
