Updated nl-NL installation language files

--- a/installation/language/nl-NL/nl-NL.ini
+++ b/installation/language/nl-NL/nl-NL.ini
@@ -116,7 +116,7 @@ INSTL_INSTALLING_CONFIG="Configuratiebestand maken"
 INSTL_INSTALLING_EMAIL="E-mail verzenden naar %s"
 
 ;Email
-INSTL_EMAIL_SUBJECT="Configuratigegevens: %s"
+INSTL_EMAIL_SUBJECT="Configuratiegegevens: %s"
 INSTL_EMAIL_HEADING="Hieronder vindt u de instellingen van de nieuwe geïnstalleerde Joomla! website:"
 INSTL_EMAIL_NOT_SENT="E-mail kan niet verzonden worden."
 
