--- a/administrator/language/en-GB/com_contact.ini
+++ b/administrator/language/en-GB/com_contact.ini
@@ -122,7 +122,7 @@ COM_CONTACT_FIELD_SHOW_TAGS_LABEL="Tags"
 COM_CONTACT_FIELD_SORTNAME1_LABEL="First Sort Field"
 COM_CONTACT_FIELD_SORTNAME2_LABEL="Second Sort Field"
 COM_CONTACT_FIELD_SORTNAME3_LABEL="Third Sort Field"
-COM_CONTACT_FIELD_USER_CUSTOM_FIELDS_SHOW_LABEL="User Custom Fields"
+COM_CONTACT_FIELD_USER_CUSTOM_FIELDS_SHOW_LABEL="User Custom Field Groups"
 COM_CONTACT_FIELD_VALUE_ICONS="Icons"
 COM_CONTACT_FIELD_VALUE_NAME="Name"
 COM_CONTACT_FIELD_VALUE_NONE="None"
