[4.0][API][com_actionslogs] keep track of API requests (#27094)

--- a/administrator/language/en-GB/plg_actionlog_joomla.ini
+++ b/administrator/language/en-GB/plg_actionlog_joomla.ini
@@ -4,6 +4,7 @@
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_ACTIONLOG_JOOMLA="Action Log - Joomla"
+PLG_ACTIONLOG_JOOMLA_API="User <a href='{accountlink}'>{username}</a> performed a {verb} on {url}"
 PLG_ACTIONLOG_JOOMLA_APPLICATION_ADMINISTRATOR="admin"
 PLG_ACTIONLOG_JOOMLA_APPLICATION_API="api"
 PLG_ACTIONLOG_JOOMLA_APPLICATION_CLI="cli"
