--- a/administrator/language/en-GB/com_actionlogs.ini
+++ b/administrator/language/en-GB/com_actionlogs.ini
@@ -9,6 +9,7 @@ COM_ACTIONLOGS_ACTION_ASC="Action ascending"
 COM_ACTIONLOGS_ACTION_DESC="Action descending"
 COM_ACTIONLOGS_ACTION_VIEWLOGS="View logs"
 COM_ACTIONLOGS_ACTION_VIEWLOGS_DESC="Allows users in the group to view the logs."
+COM_ACTIONLOGS_API_LOGGING_LABEL="Log API Requests"
 COM_ACTIONLOGS_COMMA="Comma"
 COM_ACTIONLOGS_CONFIGURATION="User Actions Log: Options"
 COM_ACTIONLOGS_CSV_DELIMITER_LABEL="CSV Delimiter"
@@ -22,6 +23,11 @@ COM_ACTIONLOGS_EXTENSION="Extension"
 COM_ACTIONLOGS_EXTENSION_ASC="Extension ascending"
 COM_ACTIONLOGS_EXTENSION_DESC="Extension descending"
 COM_ACTIONLOGS_ERROR_COULD_NOT_EXPORT_DATA="Could not export data."
+COM_ACTIONLOGS_FIELD_VALUE_DELETE="DELETE"
+COM_ACTIONLOGS_FIELD_VALUE_GET="GET"
+COM_ACTIONLOGS_FIELD_VALUE_PATCH="PATCH"
+COM_ACTIONLOGS_FIELD_VALUE_POST="POST"
+COM_ACTIONLOGS_FIELD_VALUE_PUT="PUT"
 COM_ACTIONLOGS_FILTER_SEARCH_DESC="Search in username. Prefix with ID: to search for an actionlog ID. Prefix with ITEM_ID: to search for an actionlog item ID."
 COM_ACTIONLOGS_IP_ADDRESS="IP Address"
 COM_ACTIONLOGS_IP_ADDRESS_ASC="IP Address ascending"
@@ -29,6 +35,7 @@ COM_ACTIONLOGS_IP_ADDRESS_DESC="IP Address descending"
 COM_ACTIONLOGS_IP_INVALID="Invalid IP"
 COM_ACTIONLOGS_IP_LOGGING_LABEL="IP Logging"
 COM_ACTIONLOGS_LOG_EXTENSIONS_LABEL="Events To Log"
+COM_ACTIONLOGS_LOG_VERBS_LABEL="Verbs To Log"
 COM_ACTIONLOGS_MANAGER_USERLOGS="User Actions Log"
 COM_ACTIONLOGS_N_ITEMS_DELETED="%s logs deleted."
 COM_ACTIONLOGS_N_ITEMS_DELETED_1="Log deleted."
