--- a/administrator/language/en-GB/joomla.ini
+++ b/administrator/language/en-GB/joomla.ini
@@ -646,7 +646,7 @@ JGLOBAL_WARNCOOKIES="Warning! Cookies must be enabled to access the Administrato
 JGLOBAL_WARNIE="Warning! Internet Explorer should not be used for proper operation of the Administrator Backend."
 JGLOBAL_WARNJAVASCRIPT="Warning! JavaScript must be enabled for proper operation of the Administrator Backend."
 JGLOBAL_WIDTH="Width"
-JGLOBAL_WORKFLOWS_ENABLE_LABEL="Edit Workflows"
+JGLOBAL_WORKFLOWS_ENABLE_LABEL="Enable Workflows"
 
 JGRID_HEADING_ACCESS="Access"
 JGRID_HEADING_ACCESS_ASC="Access ascending"
