--- a/installation/language/nl-NL/nl-NL.ini
+++ b/installation/language/nl-NL/nl-NL.ini
@@ -293,6 +293,7 @@ JYES="Ja"
 JLIB_DATABASE_ERROR_CONNECT_MYSQL="Kan niet met MySQL verbinden."
 JLIB_DATABASE_ERROR_DATABASE="Er vond een databasefout plaats."
 JLIB_DATABASE_ERROR_LOAD_DATABASE_DRIVER="Kan database driver niet laden: %s"
+JLIB_DATABASE_ERROR_VALID_MAIL="Het door u ingevulde e-mailadres is ongeldig. Vul een ander e-mailadres in."
 JLIB_ENVIRONMENT_SESSION_EXPIRED="Uw sessie is verlopen, laad de pagina opnieuw."
 JLIB_FILESYSTEM_ERROR_COPY_FAILED="Kopiëren mislukt"
 JLIB_FILESYSTEM_ERROR_PATH_IS_NOT_A_FOLDER_FILES="JFolder: :files: Pad is geen map. Pad: %s"
