[4.0] Add locked field to extensions table, prevent uninstalling core extensions, restructure protected extension list (#28462)

--- a/administrator/language/en-GB/com_installer.ini
+++ b/administrator/language/en-GB/com_installer.ini
@@ -66,6 +66,7 @@ COM_INSTALLER_HEADING_LANGUAGE_TAG_DESC="Language Tag descending"
 COM_INSTALLER_HEADING_LOCATION="Location"
 COM_INSTALLER_HEADING_LOCATION_ASC="Location ascending"
 COM_INSTALLER_HEADING_LOCATION_DESC="Location descending"
+COM_INSTALLER_HEADING_LOCKED="Locked"
 COM_INSTALLER_HEADING_NAME="Name"
 COM_INSTALLER_HEADING_PACKAGE_ID="Package ID"
 COM_INSTALLER_HEADING_PACKAGE_ID_ASC="Package ID ascending"
@@ -248,6 +249,7 @@ COM_INSTALLER_TYPE_TYPE_TEMPLATE="template"
 COM_INSTALLER_UNABLE_TO_FIND_INSTALL_PACKAGE="Unable to find install package"
 COM_INSTALLER_UNABLE_TO_INSTALL_JOOMLA_PACKAGE="The Joomla package cannot be installed through the Extension Manager. Please use the <a href='%s'>Joomla! Update</a> component to update Joomla."
 COM_INSTALLER_UNINSTALL_ERROR="Error uninstalling %s."
+COM_INSTALLER_UNINSTALL_ERROR_LOCKED_EXTENSION="Locked extensions cannot be uninstalled."
 COM_INSTALLER_UNINSTALL_SUCCESS="Uninstalling the %s was successful."
 COM_INSTALLER_UPDATE_FILTER_SEARCH_DESC="Search in extension name. Prefix with ID:, UID: or EID: to search for an update ID, update site ID or extension ID."
 COM_INSTALLER_UPDATE_FILTER_SEARCH_LABEL="Search Extensions with Updates"
