Updating Welsh installation language (#28779)

--- a/installation/language/cy-GB/cy-GB.ini
+++ b/installation/language/cy-GB/cy-GB.ini
@@ -35,7 +35,7 @@ INSTL_DATABASE_HOST_IS_NOT_LOCALHOST_CREATE_FILE="Nid oeddem yn gallu creu'r ffe
 INSTL_DATABASE_HOST_IS_NOT_LOCALHOST_DELETE_FILE="I gadarnhau mai chi yw perchennog y wefan hon dilëwch y ffeil o'r enw "_QQ_"%1$s"_QQ_" yr ydym newydd ei chreu yn ffolder "_QQ_"%2$s"_QQ_" eich gwefan Joomla."
 INSTL_DATABASE_HOST_IS_NOT_LOCALHOST_GENERAL_MESSAGE="Yr ydych yn ceisio defnyddio lletywr cronfa ddata nad yw ar eich gweinydd lleol. Am resymau diogelwch, mae angen i chi wirio perchnogaeth eich cyfrif gwe-letya. <a href="_QQ_"%s"_QQ_"> Darllenwch y dogfennau</a> am fwy o wybodaeth."
 INSTL_DATABASE_NAME_DESC="Mae rhai lletywyr ond yn caniatau enw cronfa ddata arbennig ar gyfer pob gwefan. Yn yr achos yma defnyddiwch rhagddodiad tabl ar gyfer pob gwefan Joomla."
-INSTL_DATABASE_NAME_LABEL="Nid oes sgema cronfa ddata yn bodoli ar gyfer y math hwn o gronfa ddata."
+INSTL_DATABASE_NAME_LABEL="Enw'r Gronfa Ddata."
 INSTL_DATABASE_NO_SCHEMA="Nid oes sgema cronfa ddata yn bodoli ar gyfer y math hwn o gronfa ddata."
 INSTL_DATABASE_OLD_PROCESS_DESC=""_QQ_"Gwneud copi wrth gefn"_QQ_" neu "_QQ_"Dynnu"_QQ_" unrhyw dablau sy'n bodoli o hen osodiadau Joomla! gyda yr un "_QQ_"Rhagddodiad Tabl"_QQ_"."
 INSTL_DATABASE_OLD_PROCESS_LABEL="Hen broses cronfa ddata"
